--- a/src/styles.css
+++ b/src/styles.css
@@ -3,24 +3,65 @@
 }
 
 #container {
-    width: 95vw;
-    height: 95vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.top-banner {
+    display: flex;
+    justify-content: center;
 }
 
 .board-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    width: 1200px;
+    gap: 50px;
 }
 
 #player-board,
 #computer-board {
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    height: 60vh;
+    width: 60vh;
+}
+
+.gameboard {
     display: flex;
-    height: 50%;
-    width: 50%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.board-row {
+    display: flex;
 }
 
 .board-space {
     border: 2px solid black;
-    width: 20px;
-    height: 20px;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 201, 201);
+}
+
+.board-space:hover {
+    background-color: rgb(0, 175, 108);
+}
+
+.ship-space {
+    background-color: darkslategray;
+}
+
+.ship-space:hover {
+    background-color: black;
+}
+
+.hit-space {
+    background-color: red;
+}
+
+.missed-space {
+    background-color: lightgray;
 }
