--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,8 @@
 .top-banner {
     display: flex;
     justify-content: center;
+    font-size: 64px;
+    font-weight: bold;
 }
 
 .board-container {
@@ -19,6 +21,11 @@
     align-items: center;
     width: 1200px;
     gap: 50px;
+}
+
+.board-title {
+    font-size: 32px;
+    font-weight: bold;
 }
 
 #player-board,
@@ -46,7 +53,7 @@
     background-color: rgb(0, 201, 201);
 }
 
-.board-space:hover {
+.computer-board:hover {
     background-color: rgb(0, 175, 108);
 }
 
@@ -54,14 +61,34 @@
     background-color: darkslategray;
 }
 
-.ship-space:hover {
-    background-color: black;
+.hit-space {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
 }
 
-.hit-space {
-    background-color: red;
+.hit-space:hover {
+    background-color: darkred;
 }
 
 .missed-space {
     background-color: lightgray;
+}
+
+.missed-space:hover {
+    background-color: darkgray;
+}
+
+#new-game {
+    border: 4px solid darkcyan;
+    border-radius: 5px;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 25px auto;
+    padding: 5px 10px;
+}
+
+#new-game:hover {
+    cursor: pointer;
 }
