--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,12 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: rgb(30, 100, 100);
+}
+
 #container {
+    color: whitesmoke;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,6 +18,10 @@
     justify-content: center;
     font-size: 64px;
     font-weight: bold;
+}
+
+#action-message {
+    font-size: 36px;
 }
 
 .board-container {
@@ -34,6 +43,15 @@
     grid-template-rows: repeat(10, 1fr);
     height: 60vh;
     width: 60vh;
+    border: 5px solid black;
+}
+
+#player-board {
+    background-color: lime;
+}
+
+#computer-board {
+    background-color: darkred;
 }
 
 .gameboard {
@@ -51,6 +69,7 @@
     width: 100%;
     height: 100%;
     background-color: rgb(0, 201, 201);
+    border-radius: 8px;
 }
 
 .computer-board:hover {
@@ -59,6 +78,7 @@
 
 .ship-space {
     background-color: darkslategray;
+    border-radius: 8px;
 }
 
 .hit-space {
@@ -68,7 +88,7 @@
     background-color: red;
 }
 
-.hit-space:hover {
+#computer-board .hit-space:hover {
     background-color: darkred;
 }
 
@@ -76,12 +96,13 @@
     background-color: lightgray;
 }
 
-.missed-space:hover {
+#computer-board .missed-space:hover {
     background-color: darkgray;
 }
 
 #new-game {
-    border: 4px solid darkcyan;
+    border: 4px solid whitesmoke;
+    background-color: darkslategray;
     border-radius: 5px;
     font-size: 24px;
     font-weight: bold;
@@ -91,4 +112,11 @@
 
 #new-game:hover {
     cursor: pointer;
+}
+
+.board-cover {
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
 }
