--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
+
 * {
     box-sizing: border-box;
+    font-family: 'Inconsolata', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -59,6 +62,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
 }
 
 .board-row {
@@ -138,4 +142,12 @@ body {
     position: fixed;
     height: 100%;
     width: 100%;
+}
+
+.placing-ships-cover {
+    display: block;
+    position: fixed;
+    height: 100%;
+    width: 50%;
+    margin-left: 50%;
 }
